--- a/services.html
+++ b/services.html
@@ -9,12 +9,44 @@
     body {
       margin: 0;
       font-family: 'Arial', sans-serif;
-      background: #fff;
+      background: #ffffff;
     }
   </style>
 </head>
 <body>
   <header-component></header-component>
+  <main class="split-box-showcase">
+    <section class="service-box left-box">
+      <div class="service-visual" aria-label="Vehicle Wrapping Visual">
+        <img src="images/Brz.jpeg" alt="Car mid-wrap" class="service-img" />
+      </div>
+      <div class="service-content">
+        <h2 class="service-headline"><em>Transform Your Ride with Custom Wraps</em></h2>
+        <ul class="service-highlights">
+          <li>Full & partial wraps</li>
+          <li>Matte, gloss, chrome, or color-shift</li>
+          <li>Fleet branding or personal customization</li>
+        </ul>
+        <a href="#" class="cta-btn">Explore Wrap Options</a>
+      </div>
+    </section>
+    <section class="service-box right-box">
+      <div class="service-visual" aria-label="Auto Detailing Visual">
+        <img src="images/Brz.jpeg" alt="Auto detailing" class="service-img" />
+      </div>
+      <div class="service-content">
+        <h2 class="service-headline"><em>Every Detail Matters</em></h2>
+        <ul class="service-highlights">
+          <li>Interior & exterior detailing</li>
+          <li>Paint correction & ceramic coating</li>
+          <li>Headlight restoration</li>
+        </ul>
+        <a href="detail.html" class="cta-btn">Book Detailing Service</a>
+      </div>
+    </section>
+  </main>
+  <footer-component></footer-component>
   <script src="header.js"></script>
+  <script src="footer.js"></script>
 </body>
 </html> 
